get, post, update, delete working for api endpoints
