# routes/index.js
@@ -1,9 +1,38 @@
 var express = require('express');
 var router = express.Router();
-
+var promise = require('promise');
 //pg config
 var pg = require('pg');
 var conString = process.env.DATABASE_URL;
+
+
+
+//authenticate
+// var bcrypt = require('bcrypt');
+// router.post('/login/{id}', function(req, res, next){
+//   pg.connect(conString, function(err, client, done) {
+//      console.log(conString)
+//     if (err) {
+//       return console.error('error fetching client from pool', err);
+//     }
+//     console.log("connected to database");
+//     client.query('SELECT * FROM guardians WHERE id = $1', [req.params.id], function(err, result) {
+//       done();
+//       console.log(req.params.id)
+//       if (err) {
+//         return conƒsole.error('error running query', err);
+//       }
+//       res.send(result);
+//     });
+//     client.query('SELECT * FROM guardians WHERE email = $1 AND password = $2', [req.body.data.attributes.email, req.body.data.attributes.password], function(err, result) {
+//       done();
+//       if (err) {
+//         return console.error('error running query', err);
+//       }
+//       res.send(result);
+//     });
+//   });
+// });
 
 //Guardians
 //get all
@@ -24,14 +53,15 @@ router.get('/guardians', function(req, res, next) {
   });
 });
 
-//post gaurdian
+//post guardian
 router.post('/guardians', function(req, res, next) {
   pg.connect(conString, function(err, client, done) {
     if (err) {
       return console.error('error fetching client from pool', err);
     }
     console.log("connected to database");
-    client.query('INSERT INTO guardians(name) VALUES($1) returning id', [req.body.data.attributes.name], function(err, result) {
+    // var hash = bcrypt.hashSync(req.body.data.attributes.password, 12);
+    client.query('INSERT INTO guardians(name, email, password) VALUES($1, $2, $3) returning id', [req.body.data.attributes.name, req.body.data.attributes.email, req.body.data.attributes.password], function(err, result) {
       done();
       if(err) {
         return console.error('error running query', err);
@@ -58,23 +88,24 @@ router.get('/guardians/:id', function(req, res, next) {
     });
   });
 });
-//update one
-// router.get('/guardians/update/:id', function(req, res, next) {
-//   pg.connect(conString, function(err, client, done) {
-//     if (err) {
-//       return console.error('error fetching client from pool', err);
-//     }
-//     console.log("connected to database");
-//     client.query('UPDATE guardians SET name = $1 WHERE id = $2', [req.body.data.attributes.name, req.params.id], function(err, result) {
-//       done();
-//       console.log(req.params.id)
-//       if (err) {
-//         return console.error('error running query', err);
-//       }
-//       res.send(result);
-//     });
-//   });
-// });
+// update one
+router.put('/guardians/update/:id', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    console.log(req.body);
+    client.query('UPDATE guardians SET name = $2, email = $3, password = $4  WHERE id = $1', [req.params.id, req.body.data.attributes.name, req.body.data.attributes.email, req.body.data.attributes.password], function(err, result) {
+      done();
+      console.log(req.params.id)
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
 //delete all
 router.delete('/guardians/delete', function(req, res, next) {
   pg.connect(conString, function(err, client, done) {
@@ -153,6 +184,23 @@ router.get('/kids/:id', function(req, res, next) {
     }
     console.log("connected to database");
     client.query('SELECT * FROM kids WHERE id = $1', [req.params.id], function(err, result) {
+      done();
+      console.log(req.params.id)
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
+// update one
+router.put('/kids/update/:id', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('UPDATE kids SET name = $1 WHERE id = $2', [req.body.data.attributes.name, req.params.id], function(err, result) {
       done();
       console.log(req.params.id)
       if (err) {
@@ -250,6 +298,23 @@ router.get('/activities/:id', function(req, res, next) {
     });
   });
 });
+// update one
+router.put('/activities/update/:id', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('UPDATE activities SET name = $1 WHERE id = $2', [req.body.data.attributes.name, req.params.id], function(err, result) {
+      done();
+      console.log(req.params.id)
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
 //delete all
 router.delete('/activities/delete', function(req, res, next) {
   pg.connect(conString, function(err, client, done) {
@@ -303,7 +368,6 @@ router.get('/relationships', function(req, res, next) {
     });
   });
 });
-
 //post one
 router.post('/relationships', function(req, res, next) {
   pg.connect(conString, function(err, client, done) {
@@ -311,7 +375,7 @@ router.post('/relationships', function(req, res, next) {
       return console.error('error fetching client from pool', err);
     }
     console.log("connected to database");
-    client.query('INSERT INTO relationships(gaurdian_id, kid_id) VALUES($1, $2) returning id', [req.body.data.attributes.gaurdian_id, req.body.data.attributes.kid_id], function(err, result) {
+    client.query('INSERT INTO relationships(guardian_id, kid_id) VALUES($1, $2) returning id', [req.body.data.attributes.guardian_id, req.body.data.attributes.kid_id], function(err, result) {
       done();
       if(err) {
         return console.error('error running query', err);
@@ -331,6 +395,23 @@ router.get('/relationships/:id', function(req, res, next) {
     client.query('SELECT * FROM relationships WHERE id = $1', [req.params.id], function(err, result) {
       done();
       console.log(req.params.id)
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
+// update one
+router.put('/relationships/update/:id', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    console.log(req.body);
+    client.query('UPDATE relationships SET guardian_id = $2, kid_id = $3 WHERE id = $1', [req.params.id, req.body.data.attributes.guardian_id, req.body.data.attributes.kid_id], function(err, result) {
+      done();
       if (err) {
         return console.error('error running query', err);
       }
@@ -416,6 +497,23 @@ router.get('/interests/:id', function(req, res, next) {
     }
     console.log("connected to database");
     client.query('SELECT * FROM interests WHERE id = $1', [req.params.id], function(err, result) {
+      done();
+      console.log(req.params.id)
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
+// update one
+router.put('/interests/update/:id', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('UPDATE interests SET kid_id = $2, activity_id = $3 WHERE id = $1', [req.params.id, req.body.data.attributes.kid_id, req.body.data.attributes.activity_id], function(err, result) {
       done();
       console.log(req.params.id)
       if (err) {
